[package]
name = "laang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
unicode-segmentation = "1.7.0"
regex = "1.4.2"
lazy_static = "1.4.0"

[dev-dependencies]
spectral = "0.6.0"

[[test]]
name = "laang_test"
path = "tests/laang_test.rs"
