[package]
name = "tuul"
version = "0.1.0"
authors = ["Sebastian Sangervasi <villain@harmless.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liib = { path = "../liib/" }
ansi_term = "0.12.1"
termion = "1.5.5"
crossterm = "0.18.2"
