[package]
name = "vid"
version = "0.1.0"
authors = ["Sebastian Sangervasi <villain@harmless.dev>"]
edition = "2018"

[dependencies]
image = "0.12.4"
liib = { path = "../liib/" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ffmpeg-next]
version = "4.4.0"
features = ["image"]
